# loan-approval-mlops

./: .gitignore  LICENSE  README.md  predictions.db  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
conf/: config.yaml
conf/data/: default.yaml
conf/model/: baseline.yaml  xgboost.yaml
conf/training/: default.yaml
docs/explanations/: example_explanations.json
notebooks/: 01.eda.ipynb
scripts/: generate_explanations.py  smoke_test.ps1
src/loan_mlops/: __init__.py  data.py  explain.py  features.py  logging_setup.py  model.py  train.py
src/loan_mlops/api/: __init__.py  app.py  db.py  dependencies.py  routing.py  schemas.py  settings.py
tests/: test_api.py  test_data.py  test_db.py  test_explain.py  test_features.py  test_integration.py  test_logging_setup.py  test_model.py  test_routing.py
