[project]
name = "loan-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "srihari4420", email = "sriharichowdary4420.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "category-encoders>=2.9.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "omegaconf>=2.3.0",
    "pandas>=3.0.3",
    "pandera>=0.31.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]

[project.scripts]
loan-mlops = "loan_mlops:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "kaggle>=2.1.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
